--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@ markdown: kramdown
 highlighter: pygments
 logo: true
 paginate: 15
-baseurl: "/"
+baseurl: /
 domain_name: 'http://hyoom1024.github.io'
 google_analytics: 'UA-128578957-1'
 gems: [jekyll-paginate]
 
 # Details for the RSS feed generator
 url:            'http://hyoom1024.github.io'
-author:         'Hyomin Lee'
+author:         'Hyomin'
