--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
+name: hyoom's hacking blog
+description: pwnable, reversing, coding.. 
 meta_description: "hyoom's hacking blog"
 
 markdown: kramdown
