--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@ highlighter: rouge
 highlight:
   line_number: true
 logo: true
-paginate: 15
+paginate: 10
 baseurl: /
 domain_name: 'http://hyoom1024.github.io'
 google_analytics: 'UA-128578957-1'
-gems: [jekyll-paginate]
+gems: [jekyll-paginate, jekyll-feed, jekyll-gist
 
 # Details for the RSS feed generator
 url:            'http://hyoom1024.github.io'
